--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
     "typescript": "^3.4.5"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@akhilksingh"
+    "registry": "https://npm.pkg.github.com/akhilksingh"
   }
 }
